[package]
authors = ["Jonas Hagen <jonas.hagen@qrst.ch>"]
edition = "2018"
readme = "README.md"
name = "firmware"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.2"
cortex-m-rt = "0.6.12"
cortex-m-semihosting = "0.3.5"
panic-itm = "0.4.1"
embedded-hal = "0.2.4"
nb = "0.1.2"
desse = "0.2.1"
ufmt = "0.1.0"

[dependencies.hx711]
path = "../../hx711"
features = ["never_type"]

[dependencies.stm32f1xx-hal]
version = "0.6.0"
features = ["stm32f103"]

# this lets you use `cargo fix`!
[[bin]]
name = "firmware"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
